<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEventName"
            android:gravity="center_horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvEventName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/event_name"
            android:id="@+id/tvEventName"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/tvAdapterDate"
            android:layout_below="@+id/etEventName"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDate"
            android:layout_below="@+id/tvAdapterDate"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:inputType="date"
            android:gravity="center_horizontal"
            android:hint="mm/dd/year" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/from_string"
        android:id="@+id/tvFromTime"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etDate"
        android:paddingTop="10dp"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/to_string"
        android:id="@+id/tvToTime"
        android:textSize="20dp"
        android:layout_below="@+id/tvFromTime"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etFromTime"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tvFromTime"
        android:layout_alignBottom="@+id/tvFromTime"
        android:hint="hh:mm"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etToTime"
        android:layout_below="@+id/etFromTime"
        android:layout_alignStart="@+id/etFromTime"
        android:layout_alignBottom="@+id/tvToTime"
        android:gravity="center_horizontal"
        android:hint="hh:mm" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_day"
        android:id="@+id/checkBox"
        android:layout_alignTop="@+id/etFromTime"
        android:layout_toEndOf="@+id/etFromTime"
        android:layout_alignBottom="@+id/etFromTime"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bSave"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_marginEnd="15dp" />

    <Button
        android:text="SEARCH EVENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/tvToTime"
        android:id="@+id/bSearchEvent" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/etLocation"
        android:id="@+id/listView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvInviteContact" />

    <TextView
        android:text="Invite a Contact:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvToTime"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/tvInviteContact"
        android:textSize="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etAddress"
        android:hint="Address"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/bSave"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etLocation"
        android:hint="Location"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/bSave"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_toRightOf="@+id/tvInviteContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvInviteContact"
        android:layout_alignBottom="@+id/tvInviteContact"
        android:layout_marginStart="11dp"
        android:id="@+id/tvInvitedContact"
        android:textSize="16dp" />

</RelativeLayout>
